--- a/index.html
+++ b/index.html
@@ -20,222 +20,245 @@
   </script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <meta name="description" content="FREE economic dashboard — Track GDP, CPI, unemployment, interest rates, trade and investment with interactive charts from World Bank & FRED." />
-  <meta name="robots" content="index, follow" />
-
+  <meta name="description" content="Economic Data Hub: explore U.S. Federal Reserve (FRED) indicators, World Bank global data, U.S. mortgage rates, and CD rates with clear explanations and quick links to live dashboards." />
+  <meta name="robots" content="index, follow, max-image-preview:large" />
+  <meta name="theme-color" content="#ffffff" />
+  <meta name="author" content="Economic Data Hub" />
   <link rel="preconnect" href="https://www.googletagmanager.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 
-  <title>Global & US Economic Indicators Dashboard 2025 | World Bank & FRED</title>
+  <title>Economic Data Hub — FRED, World Bank, Mortgage &amp; CD Rates (Live Dashboards)</title>
+
+  <!-- Open Graph / Twitter for better previews -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Economic Data Hub — FRED, World Bank, Mortgage &amp; CD Rates">
+  <meta property="og:description" content="Track key U.S. and global indicators with quick links to live dashboards.">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Economic Data Hub — FRED, World Bank, Mortgage &amp; CD Rates">
+  <meta name="twitter:description" content="Track key U.S. and global indicators with quick links to live dashboards.">
+
+  <!-- JSON-LD (SEO) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Economic Data Hub",
+    "description": "Explore Federal Reserve (FRED) indicators, World Bank data, U.S. mortgage rates, and CD rates with links to live dashboards.",
+    "about": [
+      {"@type":"Thing","name":"Federal Reserve Economic Data"},
+      {"@type":"Thing","name":"World Bank Data"},
+      {"@type":"Thing","name":"Mortgage Rates"},
+      {"@type":"Thing","name":"Certificate of Deposit (CD) Rates"}
+    ]
+  }
+  </script>
 
   <style>
-    :root {
-      --sidebar-w: 280px;
-      --bg-overlay: rgba(255,255,255,0.85);
-      --btn-bg: rgba(108,117,125,1);
-      --btn-bg-hover: #495057;
+    :root{
+      --bg: #f5f7fb;
+      --panel: #ffffff;
+      --ink: #0f172a;
+      --muted: #475569;
+      --brand: #2563eb;
+      --accent: #06b6d4;
+      --radius: 16px;
+      --shadow: 0 6px 24px rgba(16,24,40,.06);
+      --maxw: 1180px;
+      --border: 1px solid #e5e7eb;
     }
 
-    /* Reset & base */
-    *, *::before, *::after { box-sizing: border-box; }
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      font-family: "Noto Sans KR", system-ui, -apple-system, Segoe UI, Roboto, Arial, "Apple Color Emoji", "Segoe UI Emoji";
-      color: #111;
-      background: #f8f9fa;
-      -webkit-text-size-adjust: 100%;
-      text-size-adjust: 100%;
+    *,*::before,*::after{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0; font-family:Inter,system-ui,Segoe UI,Roboto,Arial,sans-serif;
+      color:var(--ink);
+      background:
+        radial-gradient(600px 300px at 10% -5%, rgba(37,99,235,.10), transparent 60%),
+        radial-gradient(800px 400px at 110% 10%, rgba(6,182,212,.12), transparent 60%),
+        var(--bg);
+      -webkit-text-size-adjust:100%; text-size-adjust:100%;
     }
 
-    /* Background image behind everything */
-    #randomImage {
-      position: fixed;
-      inset: 0;
-      width: 100vw;
-      height: 100vh;
-      object-fit: cover;
-      z-index: -1;
-      filter: saturate(0.9) brightness(0.98);
-      pointer-events: none;
+    /* Decorative background (disabled on small screens for performance) */
+    #bg { position:fixed; inset:0; width:100vw; height:100vh; object-fit:cover;
+      z-index:-2; opacity:.07; filter:saturate(.9) contrast(1.05); pointer-events:none; }
+    #scrim { position:fixed; inset:0; z-index:-1;
+      background:linear-gradient(to bottom, rgba(255,255,255,.85), rgba(255,255,255,.95)); pointer-events:none; }
+
+    .wrap{max-width:var(--maxw); margin:0 auto; padding:28px clamp(16px, 4vw, 28px);}
+    header.hero{
+      background:var(--panel); border-radius:var(--radius); box-shadow:var(--shadow);
+      padding:clamp(18px, 3.2vw, 32px); margin:20px 0 24px; border: var(--border);
+      position:relative; overflow:hidden;
+    }
+    header.hero::before{ content:""; position:absolute; inset:0 0 auto 0; height:4px;
+      background: linear-gradient(90deg, var(--brand), var(--accent)); }
+    header.hero h1{margin:0 0 8px; font-size:clamp(1.5rem, 3vw, 2.1rem)}
+    header.hero p{margin:0; color:var(--muted); font-size:clamp(1rem, 1.8vw, 1.06rem)}
+
+    /* Grid */
+    .grid{ display:grid; grid-template-columns: repeat(12, 1fr);
+      gap: clamp(14px, 2.2vw, 22px); align-items:stretch; }
+    .card{
+      grid-column: span 6;
+      background:var(--panel); border-radius:var(--radius); box-shadow:var(--shadow);
+      padding:clamp(18px, 2.6vw, 26px); display:flex; flex-direction:column; gap:12px;
+      min-height: 260px; border: var(--border);
+    }
+    .card h2{margin:0; font-size:clamp(1.1rem, 2.2vw, 1.35rem)}
+    .card p{margin:0; color:var(--muted); line-height:1.55; font-size:clamp(1rem, 1.6vw, 1.06rem)}
+    .card ul{margin:.35rem 0 0 1.1rem; color:var(--muted);}
+    .cta{ margin-top:auto; display:flex; flex-wrap:wrap; gap:10px; }
+
+    .btn{
+      appearance:none; border:0; text-decoration:none; cursor:pointer;
+      background:linear-gradient(180deg, var(--brand), #1d4ed8); color:#fff; font-weight:700;
+      padding:12px 16px; border-radius:12px; box-shadow:0 4px 14px rgba(37,99,235,.25);
+      font-size:clamp(.95rem, 1.6vw, 1.02rem);
+      transition: transform .06s ease, filter .15s ease;
+    }
+    .btn:hover{ filter:brightness(.98) }
+    .btn:active{ transform:translateY(1px) }
+
+    .explainer{ grid-column: 1 / -1; background:var(--panel); border-radius:var(--radius);
+      box-shadow:var(--shadow); padding:clamp(18px, 3vw, 28px); border: var(--border); }
+    .explainer h3{margin:0 0 .5rem; font-size:clamp(1.1rem, 2.2vw, 1.3rem)}
+    .explainer p{margin:.25rem 0; color:var(--muted); font-size:clamp(1rem, 1.6vw, 1.06rem)}
+
+    footer.site{
+      margin:22px 0 10px; background:#ffffff; border-radius:12px; padding:12px 16px;
+      box-shadow:var(--shadow); border: var(--border); display:flex; align-items:center;
+      justify-content:flex-start; font-size:clamp(.9rem, 1.4vw, .98rem); color:#1f2937;
     }
 
-    /* Layout */
-    .layout {
-      display: flex;
-      min-height: 100vh;
+    /* Mobile optimization */
+    @media (max-width: 980px){
+      .card{ grid-column: span 12; }
+      .wrap{ padding:22px 16px; }
+      footer.site{ justify-content:center; text-align:center; }
+    }
+    @media (max-width: 540px){
+      #bg{ display:none; } /* don't render bg image on small screens */
+      .btn{ width:100%; text-align:center; } /* easier tapping */
     }
 
-    .sidebar {
-      position: sticky;
-      top: 0;
-      align-self: flex-start;
-      width: var(--sidebar-w);
-      min-height: 100vh;
-      background: #343a40;
-      color: #fff;
-      padding: 20px 16px;
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
-      backdrop-filter: blur(2px);
-      background-color: rgba(52,58,64,0.9);
-    }
-
-    .sidebar h2 {
-      margin: 0 0 8px 0;
-      font-size: 1.05rem;
-      font-weight: 700;
-      opacity: 0.95;
-    }
-
-    .link-grid {
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 10px;
-    }
-
-    .sidebar a {
-      display: block;
-      padding: 12px 14px;
-      text-decoration: none;
-      color: #fff;
-      background: var(--btn-bg);
-      border-radius: 10px;
-      text-align: center;
-      line-height: 1.2;
-      font-weight: 600;
-      font-size: clamp(0.9rem, 1.5vw, 1rem);
-      box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-      transition: background 0.15s ease, transform 0.08s ease;
-    }
-    .sidebar a:hover { background: var(--btn-bg-hover); }
-    .sidebar a:active { transform: translateY(1px); }
-
-    .content {
-      flex: 1;
-      padding: 24px clamp(16px, 4vw, 48px);
-      margin: 0;
-    }
-
-    header.page {
-      background: var(--bg-overlay);
-      border-radius: 14px;
-      padding: clamp(14px, 2.5vw, 18px);
-      margin-bottom: 16px;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.08);
-    }
-
-    header.page h1 {
-      margin: 0 0 6px;
-      font-size: clamp(1.1rem, 3.2vw, 1.6rem);
-    }
-
-    header.page p {
-      margin: 0;
-      font-size: clamp(0.9rem, 2.5vw, 1rem);
-      opacity: 0.9;
-    }
-
-    .card {
-      background: var(--bg-overlay);
-      border-radius: 14px;
-      padding: clamp(14px, 2.5vw, 18px);
-      box-shadow: 0 1px 3px rgba(0,0,0,0.08);
-      min-height: 240px;
-    }
-
-    footer.site {
-      margin-top: 20px;
-      background: rgb(84,84,243);
-      color: #fff;
-      border-radius: 12px;
-      text-align: center;
-      padding: 10px 12px;
-      font-size: clamp(12px, 2.5vw, 14px);
-    }
-
-    /* Mobile tweaks */
-    @media (max-width: 1024px) {
-      .sidebar { width: min(40vw, 260px); }
-    }
-    @media (max-width: 820px) {
-      .layout { flex-direction: column; }
-      .sidebar {
-        position: relative;
-        width: 100%;
-        min-height: auto;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-        padding: 12px;
-      }
-      .link-grid {
-        grid-template-columns: repeat(2, 1fr);
-        gap: 8px;
-      }
-      .sidebar a {
-        padding: 10px;
-        font-size: clamp(0.95rem, 3.2vw, 1.05rem);
-        border-radius: 10px;
-      }
-      .content { padding-top: 14px; }
-    }
-    @media (max-width: 480px) {
-      .link-grid { grid-template-columns: 1fr; }
-      .sidebar a { font-size: clamp(0.95rem, 4vw, 1.05rem); }
-    }
-
-    /* Hide noisy/overlapping elements from original */
-    .notice-box { display: none !important; }
+    /* Accessibility helpers (for screen readers and crawlable content) */
+    .sr-only{ position:absolute; width:1px; height:1px; padding:0; margin:-1px; overflow:hidden; clip:rect(0,0,0,0); border:0; }
   </style>
 </head>
 <body>
-  <img id="randomImage" alt="Background" src="" />
+  <img id="bg" alt="Decorative gradient background" src="" />
+  <div id="scrim" aria-hidden="true"></div>
 
-  <div class="layout">
-    <aside class="sidebar" aria-label="Section Navigation">
-      <h2>Dashboards</h2>
-      <nav class="link-grid">
-        <a href="fed.html">Federal Reserve</a>
-        <a href="worldbank/worldbank.html">World Bank</a>
-        <a href="cd.html">CD Rate</a>
-        <a href="mortgage.html">Mortgage</a>
-        <a href="fund.html">Hedge Fund</a>
-      </nav>
-    </aside>
+  <div class="wrap">
+    <header class="hero">
+      <h1>Economic Data Hub</h1>
+      <p>Explore U.S. Federal Reserve (FRED) indicators, World Bank global datasets, U.S. mortgage rates, and bank CD rates — explained clearly, linked fast.</p>
+    </header>
 
-    <main class="content" role="main">
-      <header class="page">
-        <h1>Global &amp; US Economic Indicators (World Bank &amp; FRED)</h1>
-        <p>Explore GDP, CPI, unemployment, interest rates, trade, and investment. Data sources: World Bank & Federal Reserve (FRED).</p>
-      </header>
+    <section class="grid" aria-label="Data dashboards">
+      <!-- FRED -->
+      <article class="card" id="fred">
+        <h2>Federal Reserve (FRED) Indicators</h2>
+        <p>
+          FRED aggregates U.S. macro time series: unemployment (U‑3), CPI &amp; core inflation, Fed Funds rate,
+          GDP (BEA), payroll employment (BLS), and more.
+        </p>
+        <ul>
+          <li>Spot turning points in labor, prices, and policy</li>
+          <li>Aligned frequencies and recession shading</li>
+          <li>Easy export for spreadsheets and models</li>
+        </ul>
+        <div class="cta">
+          <a class="btn" href="fed.html" aria-label="Open FRED Dashboard">Open FRED Dashboard</a>
+        </div>
+      </article>
 
-      <section class="card">
-        <p style="margin:0; opacity:.85;">This landing page is now mobile‑optimized: scaled buttons, non-overlapping layout, and a responsive grid on phones/tablets.</p>
-      </section>
+      <!-- World Bank -->
+      <article class="card" id="worldbank">
+        <h2>World Bank Global Data</h2>
+        <p>
+          Compare economies worldwide: GDP (nominal/real/per‑capita), inflation, trade balance, FDI, savings, debt,
+          and hundreds of development indicators.
+        </p>
+        <ul>
+          <li>Country &amp; region filters with standard definitions</li>
+          <li>Per‑capita and growth‑rate views for fair comparisons</li>
+          <li>CSV/JSON downloads for research and teaching</li>
+        </ul>
+        <div class="cta">
+          <a class="btn" href="worldbank/worldbank.html" aria-label="Open World Bank Dashboard">Open World Bank</a>
+        </div>
+      </article>
 
-      <footer class="site">
-        <p>Copyright © 2023–2025</p>
-      </footer>
-    </main>
+      <!-- Mortgage -->
+      <article class="card" id="mortgage">
+        <h2>U.S. Mortgage Rates</h2>
+        <p>
+          Follow mortgage benchmarks (e.g., 30‑year fixed) and spreads versus Treasuries to gauge
+          affordability and financing conditions.
+        </p>
+        <ul>
+          <li>Historical highs/lows with recent movements</li>
+          <li>Macro context: inflation, policy, term premia</li>
+          <li>Export‑ready charts for reports</li>
+        </ul>
+        <div class="cta">
+          <a class="btn" href="mortgage.html" aria-label="Open Mortgage Rates Dashboard">Open Mortgage Rates</a>
+        </div>
+      </article>
+
+      <!-- CD Rates -->
+      <article class="card" id="cd">
+        <h2>Bank CD Rates</h2>
+        <p>
+          Track promotional CD yields by term (3m–60m) across institutions to compare safe opportunities and laddering strategies.
+        </p>
+        <ul>
+          <li>Term‑by‑term APY comparison</li>
+          <li>Identify yield curves &amp; specials at a glance</li>
+          <li>Export tables to CSV</li>
+        </ul>
+        <div class="cta">
+          <a class="btn" href="cd.html" aria-label="Open CD Rates Dashboard">Open CD Dashboard</a>
+        </div>
+      </article>
+
+      <!-- Full-width explainer -->
+      <aside class="explainer" id="how-to">
+        <h3>How to use this hub</h3>
+        <p><strong>Start broad, then drill down:</strong> Begin with FRED for the U.S. macro picture, then open World Bank for international comparisons.</p>
+        <p><strong>Connect macro to personal finance:</strong> Mortgage and CD sections translate macro drivers into real‑world rates you can act on.</p>
+        <p><strong>Export anything:</strong> Each dashboard supports downloading the data/visuals—handy for weekly updates or presentations.</p>
+        <p class="sr-only">Keywords: FRED, Federal Reserve Economic Data, World Bank indicators, GDP, CPI, unemployment, mortgage rates, CD rates, APY, US economy, global economy.</p>
+      </aside>
+    </section>
+
+    <footer class="site">
+      <span>Copyright © 2023–2025</span>
+    </footer>
+
+    <noscript>
+      <p>This site uses JavaScript to render interactive dashboards (FRED, World Bank, mortgage and CD pages). If JavaScript is disabled, please enable it for the best experience.</p>
+    </noscript>
   </div>
 
   <script>
-    // One consolidated loader for the background image (prevents onload conflicts)
-    (function() {
-      var pool = [];
-      // Flowers F001–F013
-      for (var i = 1; i <= 13; i++) { pool.push('image/index/flower/F' + ('00' + i).slice(-3) + '.jpeg'); }
-      // J001–J008
-      for (var j = 1; j <= 8; j++) { pool.push('image/index/flower/J' + ('00' + j).slice(-3) + '.jpg'); }
-      // Engineering samples (optional)
+    // Only load decorative background on screens wider than 540px
+    (function(){
+      var el = document.getElementById('bg');
+      if (window.matchMedia && window.matchMedia('(max-width: 540px)').matches) {
+        // skip loading to improve mobile performance
+        el.parentNode && el.parentNode.removeChild(el);
+        return;
+      }
+      var imgs = [];
+      for (var i = 1; i <= 13; i++) imgs.push('image/index/flower/F' + ('00'+i).slice(-3) + '.jpeg');
+      for (var j = 1; j <= 8; j++) imgs.push('image/index/flower/J' + ('00'+j).slice(-3) + '.jpg');
       var eng = ['image/index/engineering/image (1).png','image/index/engineering/image (2).png','image/index/engineering/image (3).png','image/index/engineering/image (4).png'];
-      pool = pool.concat(eng);
-
-      var el = document.getElementById('randomImage');
-      el.src = pool[Math.floor(Math.random() * pool.length)];
+      imgs = imgs.concat(eng);
+      el.src = imgs[Math.floor(Math.random()*imgs.length)];
     })();
   </script>
 </body>
