--- a/worldbank/worldbank.html
+++ b/worldbank/worldbank.html
@@ -4045,44 +4045,83 @@
   function destroyChart() { if (WBSTATE.chartRef) { WBSTATE.chartRef.destroy(); WBSTATE.chartRef = null; } }
 
   // Individual country: others grey, tooltip values only for selected country, no legend labels
-  window.showWBDetails = function(country, indicator, titleText) {
-    if (!WBSTATE.ready) return;
-    const modal = ensureModal();
-    const ctx = document.getElementById("wb-modal-canvas").getContext("2d");
-    destroyChart();
+  
+window.showWBDetails = function(country, indicator, titleText) {
+  if (!WBSTATE.ready) return;
+  const modal = ensureModal();
+  const ctx = document.getElementById("wb-modal-canvas").getContext("2d");
+  destroyChart();
 
-    const { labels, datasets, unit } = datasetsForPOOL(indicator, country, false);
-    document.getElementById("wb-modal-title").textContent = `${titleText}`; // hide country name
+  const { labels, datasets, unit } = datasetsForPOOL(indicator, country, false);
+  document.getElementById("wb-modal-title").textContent = `${titleText}`; // no country name
 
-    WBSTATE.chartRef = new Chart(ctx, {
-      type: "line",
-      data: { labels, datasets },
-      options: {
-        responsive: true, maintainAspectRatio: false,
-        interaction: { mode: "nearest", intersect: false },
-        plugins: {
-          legend: { display: false },
-          tooltip: {
-            mode: 'nearest',
-            intersect: false,
-            filter: (ctx) => ctx.dataset.label === country,
-            callbacks: {
-              label: (ctx) => {
-                const v = ctx.parsed.y;
-                return v == null ? "" : `${fmtValue(v, unit)}`;
-              }
+  // Compact axis tick formatter
+  const shortAxisLabel = (val, unitStr) => {
+    if (val == null || !isFinite(val)) return "";
+    const u = (unitStr||"").toLowerCase();
+    const ax = Math.abs(val);
+    const sign = val < 0 ? "-" : "";
+    // US$ or people -> compact with T/B/M/K
+    if (u.includes("us$") || u.includes("people")) {
+      if (ax >= 1e12) return `${sign}${(ax/1e12).toFixed(1)}T`;
+      if (ax >= 1e9 ) return `${sign}${(ax/1e9 ).toFixed(1)}B`;
+      if (ax >= 1e6 ) return `${sign}${(ax/1e6 ).toFixed(1)}M`;
+      if (ax >= 1e3 ) return `${sign}${(ax/1e3 ).toFixed(0)}K`;
+      return sign + Math.round(ax).toString();
+    }
+    if (u.includes("%"))     return `${Number(val).toFixed(0)}%`;
+    if (u.includes("years")) return `${Number(val).toFixed(0)}`;
+    return `${Number(val).toLocaleString()}`;
+  };
+
+  const isMobile = window.matchMedia && window.matchMedia("(max-width: 640px)").matches;
+
+  WBSTATE.chartRef = new Chart(ctx, {
+    type: "line",
+    data: { labels, datasets },
+    options: {
+      responsive: true, maintainAspectRatio: false,
+      interaction: { mode: "nearest", intersect: false },
+      plugins: {
+        legend: { display: false }, // hide country names
+        tooltip: {
+          mode: 'nearest',
+          intersect: false,
+          filter: (ctx) => ctx.dataset.label === country, // only target country shows numbers
+          callbacks: {
+            label: (ctx) => {
+              const v = ctx.parsed.y;
+              return v == null ? "" : `${fmtValue(v, unit)}`; // keep full value in tooltip
             }
           }
-        },
-        scales: {
-          x: { title: { display: true, text: "Year" } },
-          y: { title: { display: true, text: unit || "" },
-               ticks: { callback: v => (v==null?'':Number(v).toLocaleString()) } }
         }
+      },
+      scales: {
+        x: { title: { display: true, text: "Year" } },
+        y: {
+          title: { display: !isMobile, text: unit || "" },
+          ticks: {
+            callback: (v) => shortAxisLabel(v, unit),
+            maxTicksLimit: isMobile ? 4 : 6,
+            autoSkip: true,
+            padding: isMobile ? 2 : 4
+          },
+          grid: {
+            drawBorder: false
+          }
+        }
+      },
+      elements: {
+        point: { radius: 2, hitRadius: 6 }
+      },
+      layout: {
+        padding: { left: isMobile ? 4 : 12, right: 6, top: 4, bottom: 6 }
       }
-    });
-    modal.style.display = "block";
-  };
+    }
+  });
+  modal.style.display = "block";
+};
+
 
   // View All Countries: every line colored for POOL (OECD + EXTRA)
   
