--- a/worldbank/worldbank.html
+++ b/worldbank/worldbank.html
@@ -852,6 +852,45 @@
 }
 </style>
 
+
+<style id="wb-mobile-sticky-fullwidth">
+@media (max-width: 640px){
+  body.wb-mobile-fullwidth .container,
+  body.wb-mobile-fullwidth .container-fluid,
+  body.wb-mobile-fullwidth .content,
+  body.wb-mobile-fullwidth .page,
+  body.wb-mobile-fullwidth .wrapper,
+  body.wb-mobile-fullwidth .layout,
+  body.wb-mobile-fullwidth .section,
+  body.wb-mobile-fullwidth .main,
+  body.wb-mobile-fullwidth .inner,
+  body.wb-mobile-fullwidth .grid{
+    max-width:100vw !important; width:100vw !important;
+    margin-left:0 !important; margin-right:0 !important;
+    padding-left:8px !important; padding-right:8px !important;
+  }
+}
+</style>
+
+
+<style id="wb-mobile-year-table">
+@media (max-width: 640px){
+  .modal-data-container{max-height:35vh;overflow:auto;margin-top:6px;border-top:1px solid #eee;padding-top:6px;}
+  .wb-year-table{width:100%;border-collapse:collapse;font-size:12px;}
+  .wb-year-table th,.wb-year-table td{padding:4px 6px;border-bottom:1px solid #f0f0f0;text-align:right;white-space:nowrap;}
+  .wb-year-table th:first-child,.wb-year-table td:first-child{text-align:left;}
+}
+</style>
+
+
+<style id="wb-year-table-desktop">
+/* Desktop/default styles for the year/value table under the chart */
+.modal-data-container{max-height:40vh;overflow:auto;margin-top:8px;border-top:1px solid #eee;padding-top:8px;}
+.wb-year-table{width:100%;border-collapse:collapse;font-size:13px;}
+.wb-year-table th,.wb-year-table td{padding:6px 8px;border-bottom:1px solid #f0f0f0;text-align:right;white-space:nowrap;}
+.wb-year-table th:first-child,.wb-year-table td:first-child{text-align:left;}
+</style>
+
 </head>
 <body>
 <div class="container">
@@ -4127,25 +4166,42 @@
     return { labels, datasets, unit };
   }
 
-  function ensureModal() {
-    let modal = document.getElementById("wb-modal");
-    if (!modal) {
-      modal = document.createElement("div");
-      modal.id = "wb-modal";
-      modal.className = "modal";
-      modal.innerHTML = `
-        <div class="modal-content">
-          <div class="modal-header">
-            <h3 id="wb-modal-title" class="modal-title">Details</h3>
-            <button id="wb-modal-close" class="close-btn">&times;</button>
-          </div>
-          <div class="modal-chart-container">
-            <canvas id="wb-modal-canvas"></canvas>
-          </div>
-        </div>`;
-      document.body.appendChild(modal);
-      document.getElementById("wb-modal-close").addEventListener("click", ()=> modal.style.display="none");
-      modal.addEventListener("click", (e)=>{ if(e.target===modal) modal.style.display="none"; });
+  
+function ensureModal() {
+  let modal = document.getElementById("wb-modal");
+  if (!modal) {
+    modal = document.createElement("div");
+    modal.id = "wb-modal";
+    modal.className = "modal";
+    modal.innerHTML = `
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3 id="wb-modal-title" class="modal-title">Details</h3>
+          <button id="wb-modal-close" class="close-btn">&times;</button>
+        </div>
+        <div class="modal-chart-container">
+          <canvas id="wb-modal-canvas"></canvas>
+        </div>
+        <div class="modal-data-container">
+          <div id="wb-modal-table"></div>
+        </div>
+      </div>`;
+    document.body.appendChild(modal);
+    document.getElementById("wb-modal-close").addEventListener("click", ()=> modal.style.display="none");
+    modal.addEventListener("click", (e)=>{ if(e.target===modal) modal.style.display="none"; });
+  } else {
+    // If modal exists, ensure the table container exists
+    if (!document.getElementById("wb-modal-table")) {
+      const wrap = modal.querySelector(".modal-content");
+      const dataDiv = document.createElement("div");
+      dataDiv.className = "modal-data-container";
+      dataDiv.innerHTML = `<div id="wb-modal-table"></div>`;
+      wrap.appendChild(dataDiv);
+    }
+  }
+  return modal;
+}
+);
     }
     return modal;
   }
@@ -4153,6 +4209,8 @@
 
   // Individual country: others grey, tooltip values only for selected country, no legend labels
   
+
+
 window.showWBDetails = function(country, indicator, titleText) {
   if (!WBSTATE.ready) return;
   const modal = ensureModal();
@@ -4160,15 +4218,15 @@ window.showWBDetails = function(country, indicator, titleText) {
   destroyChart();
 
   const { labels, datasets, unit } = datasetsForPOOL(indicator, country, false);
-  document.getElementById("wb-modal-title").textContent = `${titleText}`; // no country name
+  document.getElementById("wb-modal-title").textContent = `${titleText}`;
 
-  // Compact axis tick formatter
+  const isMobile = window.matchMedia && window.matchMedia("(max-width: 640px)").matches;
+
   const shortAxisLabel = (val, unitStr) => {
     if (val == null || !isFinite(val)) return "";
     const u = (unitStr||"").toLowerCase();
     const ax = Math.abs(val);
     const sign = val < 0 ? "-" : "";
-    // US$ or people -> compact with T/B/M/K
     if (u.includes("us$") || u.includes("people")) {
       if (ax >= 1e12) return `${sign}${(ax/1e12).toFixed(1)}T`;
       if (ax >= 1e9 ) return `${sign}${(ax/1e9 ).toFixed(1)}B`;
@@ -4180,6 +4238,108 @@ window.showWBDetails = function(country, indicator, titleText) {
     if (u.includes("years")) return `${Number(val).toFixed(0)}`;
     return `${Number(val).toLocaleString()}`;
   };
+
+  WBSTATE.chartRef = new Chart(ctx, {
+    type: "line",
+    data: { labels, datasets },
+    options: {
+      responsive: true, maintainAspectRatio: false,
+      interaction: { mode: "nearest", intersect: false },
+      plugins: {
+        legend: { display: false },
+        tooltip: {
+          mode: 'nearest',
+          intersect: false,
+          filter: (ctx) => ctx.dataset.label === country,
+          callbacks: {
+            label: (ctx) => {
+              const v = ctx.parsed.y;
+              return v == null ? "" : `${fmtValue(v, unit)}`;
+            }
+          }
+        }
+      },
+      scales: {
+        x: { title: { display: true, text: "Year" } },
+        y: {
+          title: { display: !isMobile, text: unit || "" },
+          ticks: {
+            callback: (v) => shortAxisLabel(v, unit),
+            maxTicksLimit: isMobile ? 4 : 6,
+            autoSkip: true,
+            padding: isMobile ? 2 : 4
+          },
+          grid: { drawBorder: false }
+        }
+      },
+      elements: { point: { radius: 2, hitRadius: 6 } },
+      layout: { padding: { left: isMobile ? 4 : 12, right: 6, top: 4, bottom: 6 } }
+    }
+  });
+  modal.style.display = "block";
+
+  // ---- Build year/value table for all devices ----
+  const tableHost = document.getElementById("wb-modal-table");
+  if (tableHost) {
+    const series = getSeries(country, indicator);
+    const rows = (series.points || []).map(p => `<tr><td>${p.year}</td><td style="text-align:right">${fmtValue(p.value, series.unit)}</td></tr>`).join("");
+    tableHost.innerHTML = `<table class="wb-year-table"><thead><tr><th>Year</th><th>Value</th></tr></thead><tbody>${rows}</tbody></table>`;
+  }
+};
+
+
+  WBSTATE.chartRef = new Chart(ctx, {
+    type: "line",
+    data: { labels, datasets },
+    options: {
+      responsive: true, maintainAspectRatio: false,
+      interaction: { mode: "nearest", intersect: false },
+      plugins: {
+        legend: { display: false },
+        tooltip: {
+          mode: 'nearest',
+          intersect: false,
+          filter: (ctx) => ctx.dataset.label === country,
+          callbacks: {
+            label: (ctx) => {
+              const v = ctx.parsed.y;
+              return v == null ? "" : `${fmtValue(v, unit)}`;
+            }
+          }
+        }
+      },
+      scales: {
+        x: { title: { display: true, text: "Year" } },
+        y: {
+          title: { display: !isMobile, text: unit || "" },
+          ticks: {
+            callback: (v) => shortAxisLabel(v, unit),
+            maxTicksLimit: isMobile ? 4 : 6,
+            autoSkip: true,
+            padding: isMobile ? 2 : 4
+          },
+          grid: { drawBorder: false }
+        }
+      },
+      elements: { point: { radius: 2, hitRadius: 6 } },
+      layout: { padding: { left: isMobile ? 4 : 12, right: 6, top: 4, bottom: 6 } }
+    }
+  });
+  modal.style.display = "block";
+
+  // ---- Build mobile year/value table ----
+  const tableHost = document.getElementById("wb-modal-table");
+  if (tableHost) {
+    if (isMobile) {
+      const series = getSeries(country, indicator);
+      const rows = (series.points || []).map(p => `<tr><td>${p.year}</td><td style="text-align:right">${fmtValue(p.value, series.unit)}</td></tr>`).join("");
+      tableHost.innerHTML = `<table class="wb-year-table"><thead><tr><th>Year</th><th>Value</th></tr></thead><tbody>${rows}</tbody></table>`;
+    } else {
+      tableHost.innerHTML = "";
+    }
+  }
+};
+
 
   const isMobile = window.matchMedia && window.matchMedia("(max-width: 640px)").matches;
 
@@ -4233,6 +4393,7 @@ window.showWBDetails = function(country, indicator, titleText) {
   // View All Countries: every line colored for POOL (OECD + EXTRA)
   
 
+
 window.showAllCountriesChart = function(indicator, titleText) {
   if (!WBSTATE.ready) return;
   const modal = ensureModal();
@@ -4242,7 +4403,8 @@ window.showAllCountriesChart = function(indicator, titleText) {
   const { labels, datasets, unit } = datasetsForPOOL(indicator, null, true);
   document.getElementById("wb-modal-title").textContent = `All Countries - ${titleText}`;
 
-  // Compact axis tick formatter (same as individual)
+  const isMobile = window.matchMedia && window.matchMedia("(max-width: 640px)").matches;
+
   const shortAxisLabel = (val, unitStr) => {
     if (val == null || !isFinite(val)) return "";
     const u = (unitStr||"").toLowerCase();
@@ -4259,6 +4421,53 @@ window.showAllCountriesChart = function(indicator, titleText) {
     if (u.includes("years")) return `${Number(val).toFixed(0)}`;
     return `${Number(val).toLocaleString()}`;
   };
+
+  WBSTATE.chartRef = new Chart(ctx, {
+    type: "line",
+    data: { labels, datasets },
+    options: {
+      responsive: true,
+      maintainAspectRatio: false,
+      interaction: { mode: "nearest", intersect: false },
+      plugins: {
+        legend: { display: false },
+        tooltip: {
+          mode: "nearest",
+          intersect: false,
+          callbacks: {
+            title: (items) => items && items.length ? items[0].label : "",
+            label: (ctx) => {
+              const v = ctx.parsed.y;
+              const name = ctx.dataset.label || "";
+              return v == null ? "" : `${name}: ${fmtValue(v, unit)}`;
+            }
+          }
+        }
+      },
+      scales: {
+        x: { title: { display: true, text: "Year" } },
+        y: {
+          title: { display: !isMobile, text: unit || "" },
+          ticks: {
+            callback: (v) => shortAxisLabel(v, unit),
+            maxTicksLimit: isMobile ? 4 : 6,
+            autoSkip: true,
+            padding: isMobile ? 2 : 4
+          },
+          grid: { drawBorder: false }
+        }
+      },
+      elements: { point: { radius: 1.8, hitRadius: 6 } },
+      layout: { padding: { left: isMobile ? 4 : 12, right: 4, top: 4, bottom: 6 } }
+    }
+  });
+  modal.style.display = "block";
+
+  // Clear mobile table for 'View All'
+  const tableHost = document.getElementById("wb-modal-table");
+  if (tableHost) tableHost.innerHTML = "";
+};
+
 
   const isMobile = window.matchMedia && window.matchMedia("(max-width: 640px)").matches;
 
@@ -4415,6 +4624,28 @@ window.showAllCountriesChart = function(indicator, titleText) {
 })();
 </script>
 
+
+
+<script id="wb-mobile-stickify">
+(function(){
+  function applyStickify(){
+    if (!(window.matchMedia && window.matchMedia("(max-width: 640px)").matches)) return;
+    document.body.classList.add("wb-mobile-fullwidth");
+    const sel = ".container,.container-fluid,.content,.page,.wrapper,.layout,.section,.main,.inner,.grid";
+    document.querySelectorAll(sel).forEach(el => {
+      el.style.maxWidth = "100vw";
+      el.style.width = "100vw";
+      el.style.marginLeft = "0";
+      el.style.marginRight = "0";
+      if (!el.style.paddingLeft)  el.style.paddingLeft = "8px";
+      if (!el.style.paddingRight) el.style.paddingRight = "8px";
+    });
+  }
+  window.addEventListener("DOMContentLoaded", applyStickify);
+  window.addEventListener("load", applyStickify);
+  window.addEventListener("resize", applyStickify);
+})();
+</script>
 
 </body>
 </html>
