--- a/index.html
+++ b/index.html
@@ -239,7 +239,9 @@
           <li>PNG &amp; CSV export</li>
         </ul>
         <div class="cta">
-          <a class="btn" href="housing/housing.html" aria-label="Open Housing Price Index Dashboard">Open Housing Dashboard</a>
+          <a class="btn" href="housing.html" aria-label="Open Housing Price Index Dashboard">Open Housing Dashboard</a>
+<!--           <a class="btn" href="housing/housing.html" aria-label="Open Housing Price Index Dashboard">Open Housing Dashboard</a> -->
+          
         </div>
       </article>
 
