--- a/housing/housing.html
+++ b/housing/housing.html
@@ -193,7 +193,7 @@
 // Example: 'https://raw.githubusercontent.com/USERNAME/REPO/BRANCH/housing/housing.csv'
 const CSV_URL = 'https://raw.githubusercontent.com/USERNAME/REPO/BRANCH/housing/housing.csv';
 // Fallback relative path if hosting both files together:
-const CSV_FALLBACK = 'housing/housing.csv';
+const CSV_FALLBACK = './housing.csv';
 
 // ====== Globals ======
 let allSeries = [];
@@ -496,7 +496,8 @@ if(searchEl){ searchEl.addEventListener('input', refreshUniverse); }
 
 // ====== CSV Loader ======
 async function loadCsvToSeries(){
-  const url = CSV_URL.includes('USERNAME/REPO/BRANCH') ? CSV_FALLBACK : CSV_URL;
+  const base = CSV_URL.includes('USERNAME/REPO/BRANCH') ? CSV_FALLBACK : CSV_URL;
+  const url = base + (base.includes('?') ? '&' : '?') + 'ts=' + Date.now();
   return new Promise((resolve, reject) => {
     Papa.parse(url, {
       download: true,
@@ -514,7 +515,7 @@ async function loadCsvToSeries(){
     console.error('CSV load failed:', err);
     const note = document.createElement('div');
     note.className = 'note';
-    note.textContent = 'CSV load failed. Please check CSV_URL or host housing/housing.csv alongside this file.';
+    note.textContent = 'CSV 로드 실패: 경로를 확인하세요. (현재 시도한 경로: ' + (CSV_URL.includes('USERNAME/REPO/BRANCH') ? CSV_FALLBACK : CSV_URL) + ')';
     document.querySelector('.hero')?.appendChild(note);
   });
 }
